--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                                 Projects</a>
                             <ul class="dropdown-menu">
                                 <li><a href="proj_cat_ind.html">Industrial Projects</a></li>
-                                <li><a href="proj_cat_energy.html">Renewable Energy</a></li>
+                                <li><a href="proj_solar.html">Renewable Energy</a></li>
                                 <li><a href="proj_cat_farming.html">Farming Projects</a></li>
-                                <li><a href="proj_cat_hospitality.html">Hospitality Projects</a></li>
-                                <li><a href="proj_cat_trading.html">Trading Industry</a></li>
+                                <li><a href="proj_hotel.html">Hospitality Projects</a></li>
+                                <li><a href="proj_supermarket.html">Trading Industry</a></li>
                             </ul>
                         </li>
                         <li>
@@ -127,11 +127,7 @@
                                                 medium, and largest enterprises to leverage innovative technology
                                                 to compete more efficiently domestically and globally in sector
                                             </p>
-                                            <div class="slider-button">
-                                                <a data-animation="animated slideInUp"
-                                                    class="btn btn-outline-light effect btn-md" href="#">Explore
-                                                    Now</a>
-                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -154,11 +150,7 @@
                                                 Establish Private Industrial Campus and construct hundreds of factories
                                                 in the manufacturing industry
                                             </p>
-                                            <div class="slider-button">
-                                                <a data-animation="animated slideInUp"
-                                                    class="btn btn-outline-light effect btn-md" href="#">View
-                                                    Projects</a>
-                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -183,11 +175,7 @@
                                                 technologies that will improve our daily lives and help power a cleaner
                                                 world.
                                             </p>
-                                            <div class="slider-button">
-                                                <a data-animation="animated slideInUp"
-                                                    class="btn btn-outline-light effect btn-md" href="#">View
-                                                    Projects</a>
-                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -208,11 +196,7 @@
                                                 Form Modern Cow Dairy Farming for the purpose of milk and dairy
                                                 products
                                             </p>
-                                            <div class="slider-button">
-                                                <a data-animation="animated slideInUp"
-                                                    class="btn btn-outline-light effect btn-md" href="#">View
-                                                    Projects</a>
-                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -234,11 +218,7 @@
                                                 Found modern Garments factories to manufacturing man, women and
                                                 children clothing items to trade local and international markets
                                             </p>
-                                            <div class="slider-button">
-                                                <a data-animation="animated slideInUp"
-                                                    class="btn btn-outline-light effect btn-md" href="#">View
-                                                    Projects</a>
-                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -258,11 +238,7 @@
                                             <p class="animated slideInRight">
                                                 Establish many modern hotels and resorts to develop tourism services
                                             </p>
-                                            <div class="slider-button">
-                                                <a data-animation="animated slideInUp"
-                                                    class="btn btn-outline-light effect btn-md" href="#">View
-                                                    Projects</a>
-                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -284,11 +260,7 @@
                                                 Establish Many Supermarkets and Shopping malls in the largest scale to
                                                 trade retails and wholesale business
                                             </p>
-                                            <div class="slider-button">
-                                                <a data-animation="animated slideInUp"
-                                                    class="btn btn-outline-light effect btn-md" href="#">View
-                                                    Projects</a>
-                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -312,11 +284,7 @@
                                                 even
                                                 personal services
                                             </p>
-                                            <div class="slider-button">
-                                                <a data-animation="animated slideInUp"
-                                                    class="btn btn-outline-light effect btn-md" href="#">View
-                                                    Projects</a>
-                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -388,7 +356,7 @@
                         <img src="assets/img/invest/invest-3.jpg" class="card-img-top" alt="...">
                         <div class="card-body overlay">
                             <a href="proj_dairy.html" class="card-text fs-5 text-light">
-                                To set up large scale dairy farms
+                                To set up large scale farming in Sri Lanka
                             </a>
                         </div>
                     </div>
