--- a/proj_cat_energy.html
+++ b/proj_cat_energy.html
@@ -79,10 +79,10 @@
                                 Projects</a>
                             <ul class="dropdown-menu">
                                 <li><a href="proj_cat_ind.html">Industrial Projects</a></li>
-                                <li><a href="proj_cat_energy.html">Renewable Energy</a></li>
+                                <li><a href="proj_solar.html">Renewable Energy</a></li>
                                 <li><a href="proj_cat_farming.html">Farming Projects</a></li>
-                                <li><a href="proj_cat_hospitality.html">Hospitality Projects</a></li>
-                                <li><a href="proj_cat_trading.html">Trading Industry</a></li>
+                                <li><a href="proj_hotel.html">Hospitality Projects</a></li>
+                                <li><a href="proj_supermarket.html">Trading Industry</a></li>
                             </ul>
                         </li>
                         <li>
@@ -113,7 +113,7 @@
             <div class="row row-cols-1 row-cols-md-3 g-3">
                 <div class="col">
                     <div class="card">
-                        <a href="proj_solar.html">
+                        <a href="#">
                             <img src="assets/img/projects/solar/1.jpeg" class="card-img-top" alt="...">
                             <div class="card-body overlay team">
                                 <p class="card-text fs-5 name">
