--- a/proj_hotel.html
+++ b/proj_hotel.html
@@ -109,49 +109,45 @@
     <!-- Directors Area -->
     <div class="bg-gray p-2 text-dark bg-opacity-10">
         <div class="container py-5 text-center ">
-            <h1 class="fw-bolder text-success">S L B I Modern Children's Clothing Garment Factory</h1>
+            <h1 class="fw-bolder text-success">S L B I MODERN HOTEL AND RESORT</h1>
             <p class="fs-5 text-justify">
-                S L B I Modern Children's Clothing Garment Factory; Sri Lanka is ready to mass-produce all types of
-                Children's clothing with high technology.
+                Having all the modern facilities with the development of a multi-dimensional lifestyle complex
+                consisting of an international standard eighty rooms 5 Star Hotel with dining options and conferencing
+                and banqueting facilities and a Signature Shopping Complex.
+
+            </p>
+            <h3 class="fw-bold">Introduction</h3>
+            <h4>ABOUT THE PROJECT</h4>
+
+            <p class="text-justify fs-5">
+
+                To set up a Hotel cum Resort having all the modern facilities with the development of a multidimensional
+                lifestyle complex consisting of an international standard eighty rooms 5 Star Hotel with dining options
+                and conferencing and banqueting facilities and a Signature Shopping Complex with a Movie Multiplex with
+                all facilities such as Park and Garden at Cost of SLRs. 10,000Mn in an area of 42 Acres in Nilaveli,
+                Trincomalee District.
 
             </p>
             <p class="text-justify fs-5">
-                The institute will provide training and employment opportunities to young and women in Sri Lanka in the
-                field of garment manufacturing with the help of high technology. The company is ready to market its
-                clothing worldwide.
+
+                The following are the proposed layout required for the Shopping Complex and hotel:
+
             </p>
+            <h4>SHOPPING COMPLEX</h4>
+
 
             <div class="row row-cols-1 row-cols-md-4 g-4 mt-3">
                 <div class="col">
                     <img src="assets/img/projects/clothing/children/1.jpg" class="card-img-top"
                         alt="Children's Clothing Garment Factory">
                 </div>
-                <div class="col">
-                    <img src="assets/img/projects/clothing/children/2.jpg" class="card-img-top"
-                        alt="Children's Clothing Garment Factory">
-                </div>
-                <div class="col">
-                    <img src="assets/img/projects/clothing/children/3.jpg" class="card-img-top"
-                        alt="Children's Clothing Garment Factory">
-                </div>
-                <div class="col">
-                    <img src="assets/img/projects/clothing/children/4.jpg" class="card-img-top"
-                        alt="Children's Clothing Garment Factory">
-                </div>
+
             </div>
             <h3 class="mt-5">Manufacturing and exporting products of this company</h3>
             <ul class="list-group list-group-flush text-start w-auto">
                 <li class="list-group-item"> Overalls</li>
-                <li class="list-group-item"> Mittens</li>
-                <li class="list-group-item"> Beanie</li>
-                <li class="list-group-item"> Baby apron
-                </li>
-                <li class="list-group-item"> Socks</li>
-                <li class="list-group-item"> Diaper</li>
-                <li class="list-group-item">Singlet </li>
-                <li class="list-group-item">Shoes </li>
-                <li class="list-group-item"> Safety pin
-                </li>
+
+
             </ul>
         </div>
     </div>
