--- a/proj_fashion.html
+++ b/proj_fashion.html
@@ -79,10 +79,10 @@
                                 Projects</a>
                             <ul class="dropdown-menu">
                                 <li><a href="proj_cat_ind.html">Industrial Projects</a></li>
-                                <li><a href="proj_cat_energy.html">Renewable Energy</a></li>
+                                <li><a href="proj_solar.html">Renewable Energy</a></li>
                                 <li><a href="proj_cat_farming.html">Farming Projects</a></li>
-                                <li><a href="proj_cat_hospitality.html">Hospitality Projects</a></li>
-                                <li><a href="proj_cat_trading.html">Trading Industry</a></li>
+                                <li><a href="proj_hotel.html">Hospitality Projects</a></li>
+                                <li><a href="proj_supermarket.html">Trading Industry</a></li>
                             </ul>
                         </li>
                         <li>
@@ -123,6 +123,14 @@
             </p>
 
             <div class="row row-cols-1 row-cols-md-4 g-4 mt-3">
+                <div class="col">
+                    <img src="assets/img/projects/fashion/1.jpg" class="card-img-top"
+                        alt="Fashion Accessories Manufacturing">
+                </div>
+                <div class="col">
+                    <img src="assets/img/projects/fashion/2.jpg" class="card-img-top"
+                        alt="Fashion Accessories Manufacturing">
+                </div>
                 <div class="col">
                     <img src="assets/img/projects/fashion/images (1).jpg" class="card-img-top"
                         alt="Fashion Accessories Manufacturing">
