--- a/proj_light.html
+++ b/proj_light.html
@@ -79,10 +79,10 @@
                                 Projects</a>
                             <ul class="dropdown-menu">
                                 <li><a href="proj_cat_ind.html">Industrial Projects</a></li>
-                                <li><a href="proj_cat_energy.html">Renewable Energy</a></li>
+                                <li><a href="proj_solar.html">Renewable Energy</a></li>
                                 <li><a href="proj_cat_farming.html">Farming Projects</a></li>
-                                <li><a href="proj_cat_hospitality.html">Hospitality Projects</a></li>
-                                <li><a href="proj_cat_trading.html">Trading Industry</a></li>
+                                <li><a href="proj_hotel.html">Hospitality Projects</a></li>
+                                <li><a href="proj_supermarket.html">Trading Industry</a></li>
                             </ul>
                         </li>
                         <li>
@@ -151,6 +151,10 @@
                 </div>
                 <div class="col">
                     <img src="assets/img/projects/light/1 (7).jpeg" class="card-img-top"
+                        alt="Lights & Lighting Products Manufacturing">
+                </div>
+                <div class="col">
+                    <img src="assets/img/projects/light/8.jpg" class="card-img-top"
                         alt="Lights & Lighting Products Manufacturing">
                 </div>
             </div>
