--- a/vision.html
+++ b/vision.html
@@ -71,19 +71,15 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="projects.html" class="dropdown-toggle smooth-menu" data-toggle="dropdown">Our
-                            Projects</a>
-                    <li class="dropdown">
                         <a href="#" class="dropdown-toggle smooth-menu" data-toggle="dropdown">Our
                             Projects</a>
                         <ul class="dropdown-menu">
                             <li><a href="proj_cat_ind.html">Industrial Projects</a></li>
-                            <li><a href="proj_cat_energy.html">Renewable Energy</a></li>
+                            <li><a href="proj_solar.html">Renewable Energy</a></li>
                             <li><a href="proj_cat_farming.html">Farming Projects</a></li>
-                            <li><a href="proj_cat_hospitality.html">Hospitality Projects</a></li>
-                            <li><a href="proj_cat_trading.html">Trading Industry</a></li>
+                            <li><a href="proj_hotel.html">Hospitality Projects</a></li>
+                            <li><a href="proj_supermarket.html">Trading Industry</a></li>
                         </ul>
-                    </li>
                     </li>
                     <li>
                         <a href="products.html">Our Products</a>
