--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                     <div class="card">
                         <img src="assets/img/invest/invest-5.jpg" class="card-img-top" alt="...">
                         <div class="card-body overlay">
-                            <a href="#" class="card-text fs-5 text-light">
+                            <a href="proj_hotel.html" class="card-text fs-5 text-light">
                                 Establishment of Hotel and Resorts to start businesses in the tourism sector.
                             </a>
                         </div>
