--- a/index.html
+++ b/index.html
@@ -313,9 +313,10 @@
     <div class="container py-5">
         <h1 class="fw-bolder">Founder Message</h1>
         <p class="fs-5 text-justify mb-4">
-            S L B I GROUP is not only the number one destination in the world until world destroyed but also on a
-            journey of defining 10 structures to perpetuate a series of community tasks and the company is a journey
-            that brings together all the entrepreneurs to make company employers best the economy.
+            S L B I GROUP is not only the number one destination in the world until the world is destroyed
+            but also on a journey of defining ten structures to perpetuate a series of community tasks. The
+            company is on a journey that brings together all the entrepreneurs to make the employers of the
+            company the best in the economy.
         </p>
         <a href="founder-message.html" class="fs-5 text-muted read-more p-2 border border-secondary">Read More</a>
     </div>
@@ -335,8 +336,18 @@
                     <div class="card">
                         <img src="assets/img/invest/invest-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body overlay">
-                            <a href="#" class="card-text fs-5 text-light">
+                            <a href="proj_cat_ind.html" class="card-text fs-5 text-light">
                                 Starting private industrial Campus and starting hundreds of factories.
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="assets/img/invest/invest-5.jpg" class="card-img-top" alt="...">
+                        <div class="card-body overlay">
+                            <a href="proj_hotel.html" class="card-text fs-5 text-light">
+                                Establishment of Hotel and Resorts to start businesses in the tourism sector.
                             </a>
                         </div>
                     </div>
@@ -355,7 +366,7 @@
                     <div class="card">
                         <img src="assets/img/invest/invest-3.jpg" class="card-img-top" alt="...">
                         <div class="card-body overlay">
-                            <a href="proj_dairy.html" class="card-text fs-5 text-light">
+                            <a href="proj_cat_farming.html" class="card-text fs-5 text-light">
                                 To set up large scale farming in Sri Lanka
                             </a>
                         </div>
@@ -371,16 +382,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/img/invest/invest-5.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay">
-                            <a href="proj_hotel.html" class="card-text fs-5 text-light">
-                                Establishment of Hotel and Resorts to start businesses in the tourism sector.
-                            </a>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="col">
                     <div class="card">
                         <img src="assets/img/invest/invest-6.jpg" class="card-img-top" alt="...">
