--- a/proj_supermarket.html
+++ b/proj_supermarket.html
@@ -111,6 +111,12 @@
         <div class="container py-5 text-center ">
             <h1 class="fw-bolder text-success">S L B I SUPER MARKET</h1>
             <p class="fs-5 text-justify">
+                The Supermarkets and Grocery Stores industry accounts for the largest
+                food retail channel in the world. Operators in this industry retail general lines of food
+                products, including fresh and prepared meats, poultry and seafood, canned and frozen
+                foods, fresh fruits and vegetables and various dairy products.
+            </p>
+            <p class="fs-5 text-justify">
                 S L B I GROUP is to establish S L B I SUPER MARKETs in Sri Lanka. This is to provide job opportunities
                 to tens of thousands of young men and women in Sri Lanka. And to provide customers with quality products
                 worth their money.
@@ -157,7 +163,9 @@
                     <img src="assets/img/projects/supermarket/1 (7).jpeg" class="card-img-top"
                         alt="S L B I SUPER MARKET">
                 </div>
-
+                <div class="col">
+                    <img src="assets/img/projects/supermarket/8.jpg" class="card-img-top" alt="S L B I SUPER MARKET">
+                </div>
 
 
             </div>
