--- a/proj_cat_ind.html
+++ b/proj_cat_ind.html
@@ -110,6 +110,37 @@
     <div class="bg-gray p-2 text-dark bg-opacity-10">
         <div class="container py-5 text-center ">
             <h1 class="fw-bolder text-success">Industrial Projects</h1>
+            <p class="text-justify fs-5">
+                Starting private industrial Campus and starting hundreds of factories to import raw materials and
+                components from abroad and to manufacture and export goods in Sri Lanka and export overseas.
+            </p>
+            <div class="row row-cols-1 row-cols-md-4  my-3">
+                <div class="col">
+                    <img src="assets/img/projects/campus/1.jpg" class="card-img-top" alt="Campus">
+                </div>
+                <div class="col">
+                    <img src="assets/img/projects/campus/2.jpg" class="card-img-top" alt="Campus">
+                </div>
+                <div class="col">
+                    <img src="assets/img/projects/campus/3.jpg" class="card-img-top" alt="Campus">
+                </div>
+                <div class="col">
+                    <img src="assets/img/projects/campus/4.jpg" class="card-img-top" alt="Campus">
+                </div>
+
+
+            </div>
+            <p class="text-justify fs-5">
+                Manufacturing creates opportunities for capital accumulation more than agriculture. This means that
+                companies in industry, be it Small, Medium or Large, are able to invest in diverse assets and to
+                increase capital flow. Additionally, the returns to capital in manufacturing are higher than in other
+                sectors. Because it supports productive investments, manufacturing enables high savings rates.
+            </p>
+            <p class="text-justify fs-5">
+                Moreover, you will find that typically, investment spending is channeled towards manufactured goods such
+                as machinery, equipment and building material.
+            </p>
+
             <div class="row row-cols-1 row-cols-md-3 g-3">
                 <div class="col">
                     <div class="card">
@@ -117,7 +148,7 @@
                             <img src="assets/img/projects/clothing/mg.jpg" class="card-img-top" alt="...">
                             <div class="card-body overlay team">
                                 <p class="card-text fs-5 name">
-                                    S L B I Modern Clothing Garment Factory
+                                    S L B I MODERN CLOTHING GARMENT FACTORY
                                 </p>
                             </div>
                         </a>
