--- a/proj_cat_ind.html
+++ b/proj_cat_ind.html
@@ -114,7 +114,7 @@
                 Starting private industrial Campus and starting hundreds of factories to import raw materials and
                 components from abroad and to manufacture and export goods in Sri Lanka and export overseas.
             </p>
-            <div class="row row-cols-1 row-cols-md-4  my-3">
+            <div class="row row-cols-1 row-cols-md-4 g-4 my-3">
                 <div class="col">
                     <img src="assets/img/projects/campus/1.jpg" class="card-img-top" alt="Campus">
                 </div>
