--- a/proj_hotel.html
+++ b/proj_hotel.html
@@ -129,20 +129,240 @@
 
             </p>
             <p class="text-justify fs-5">
-
                 The following are the proposed layout required for the Shopping Complex and hotel:
-
             </p>
             <h4>SHOPPING COMPLEX</h4>
 
-
-            <div class="row row-cols-1 row-cols-md-4 g-4 mt-3">
-                <div class="col">
-                    <img src="assets/img/projects/clothing/children/1.jpg" class="card-img-top"
-                        alt="Children's Clothing Garment Factory">
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/3.jpg" class="card-img-top " alt="HOTEL AND RESORT">
                 </div>
-
+                <div class="col-3"></div>
             </div>
+            <p class="text-justify fs-5">
+                The Shopping Complex will consist of top quality branded shops which will be landmark location for the
+                people of Trincomalee for shopping. These Shopping Complex will also cater to all the needs of the
+                people.
+            </p>
+
+            <h4>MULTIPLEX</h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/4.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                A multiplex is a movie theater complex with multiple screens within a single complex. They are usually
+                housed in a specially designed building. This will be an added attraction for the entertainment of the
+                people in Trincomalee as we didn’t have a proper branded theatre in Trincomalee.
+            </p>
+
+            <h4>HOTEL ROOMS & SUITES</h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/5.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                The Hotel Rooms will be of a typical 5 Star Room of an International Brand and will offer all the
+                comfort of a 5 Star Deluxe hotel.
+            </p>
+
+            <h4>BANQUET AND CONFERENCE</h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/6.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                The Hotel will house a State-of-the- Art Banquet Hall which can accommodate over 400 People and will be
+                the best place to host conference, weddings and other
+            </p>
+
+            <h4>RESTAURANT AND BAR</h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/7.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                The Hotel will have a 24 Hour Buffet Coffee Shop along with a Signature restaurant and Bar for the
+                resident and non- resident guests.
+            </p>
+
+            <h4>HOTEL TRAVEL DESK</h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/8.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                The hotel will also have a Travel Desk, which will help visitors to gather information and sketch a tour
+                for visiting the tourist place.
+            </p>
+
+            <h4>TRANSPORT FACILITY</h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/9.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                The hotel will also having transport facility, the company will be buying vehicles to pick the guests
+                from the suitable place.
+            </p>
+
+            <h4>BUSINESS CENTER</h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/10.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                The business center is equipped with the latest office automation equipment to provide secretarial
+                services and allied services like courier services, Email services, Telecommunication services and other
+                support services.
+            </p>
+
+            <h4>CURRENCY EXCHANGE FACILITY
+            </h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/11.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                The hotel will also provide the currency exchange facility to overseas guests.
+
+            </p>
+
+            <h4>RESORT COMPLEX COTTAGES
+            </h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/12.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                The Resort will be having good nos. of cottages with a refreshing mix of style and spacious elegance,
+                our guest rooms and suites will be offering peace and tranquility as well as the comforts of modern day
+                living.
+            </p>
+
+            <h4>AYURVEDA CENTRE
+            </h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/13.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                The resort will be having a Ayurveda center. Ayurveda is the alternative medicine of Eastern Province
+                tradition, originated in ancient times. It is a natural healing science for cure, prevention or
+                rejuvenation of the body, based on the use of herbs or herbal medicines.
+
+            </p>
+
+            <h4>KIDS ARENA AND BOARD GAMES
+            </h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/14.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                The Resort Complex will be having a separate area for the kids; Kids Arena for children to have fun and
+                play all the time while visiting the Resort. The Resort will be having an area for board games, which
+                will provide additional options for the guests to spend excellence time in the Resort.
+
+            </p>
+
+            <h4>GYMNASIUM
+            </h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/15.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                A gymnasium will be surrounded by state of the art equipment from the Life Fitness, USA, the World’s
+                undisputed leader in Gym Equipment. Equipment will be is available to tone up body muscles and
+                rejuvenate. Visitors can sweat out superfluous body fat and discover the fresh self within.
+
+            </p>
+
+            <h4>SWIMMING POOL
+            </h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/16.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                A swimming pool, which is also an important part of the club. The swimming pool facility is a must for
+                any club and thus it will be instrumental for the popularity of the club. It will be 1 of the main basis
+                of marketing the club facilities. There will also a small nearby kid’s swimming pool. There will be a
+                juice and snack bar along with the swimming pool to add to the service provisions.
+            </p>
+
+            <h4>GARDEN
+            </h4>
+
+            <div class="row mb-4">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <img src="assets/img/projects/hotel/17.jpg" class="card-img-top " alt="HOTEL AND RESORT">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <p class="text-justify fs-5">
+                In the proposed project there is also garden with coconut trees in two acres and the cashew tree in two
+                acres. While the beautiful garden to the hotel and the income source and gardens infuses a breath of
+                fresh air and fill both young and old with vitality, which will be provided on rent for the public in
+                the village. The employment opportunities will be created in both way ones from hotel and from garden.
+            </p>
+
+
             <h3 class="mt-5">Manufacturing and exporting products of this company</h3>
             <ul class="list-group list-group-flush text-start w-auto">
                 <li class="list-group-item"> Overalls</li>
