--- a/proj_supermarket.html
+++ b/proj_supermarket.html
@@ -110,7 +110,7 @@
     <div class="bg-gray p-2 text-dark bg-opacity-10">
         <div class="container py-5 text-center ">
             <h1 class="fw-bolder text-success">S L B I SUPER MARKET</h1>
-            <p class="fs-5 text-justify">
+            <p class="fs-5 text-justify text-break">
                 The Supermarkets and Grocery Stores industry accounts for the largest
                 food retail channel in the world. Operators in this industry retail general lines of food
                 products, including fresh and prepared meats, poultry and seafood, canned and frozen
