--- a/index.html
+++ b/index.html
@@ -334,63 +334,75 @@
             <div class="row row-cols-1 row-cols-md-3 g-3">
                 <div class="col">
                     <div class="card">
-                        <img src="assets/img/invest/invest-1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay">
-                            <a href="proj_cat_ind.html" class="card-text fs-5 text-light">
-                                Starting private industrial Campus and starting hundreds of factories.
-                            </a>
-                        </div>
+                        <a href="proj_cat_ind.html">
+                            <img src="assets/img/invest/invest-1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay">
+                                <p class="card-text fs-5 text-light">
+                                    Starting private industrial Campus and starting hundreds of factories.
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="assets/img/invest/invest-5.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay">
-                            <a href="proj_hotel.html" class="card-text fs-5 text-light">
-                                Establishment of Hotel and Resorts to start businesses in the tourism sector.
-                            </a>
-                        </div>
+                        <a href="proj_hotel.html">
+                            <img src="assets/img/invest/invest-5.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay">
+                                <p class="card-text fs-5 text-light">
+                                    Establishment of Hotel and Resorts to start businesses in the tourism sector.
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="assets/img/invest/invest-2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay">
-                            <a href="proj_supermarket.html" class="card-text fs-5 text-light">
-                                Starting Super Markets and Shopping Mall in Sri Lanka
-                            </a>
-                        </div>
+                        <a href="proj_supermarket.html">
+                            <img src="assets/img/invest/invest-2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay">
+                                <p class="card-text fs-5 text-light">
+                                    Starting Super Markets and Shopping Mall in Sri Lanka
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="assets/img/invest/invest-3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay">
-                            <a href="proj_cat_farming.html" class="card-text fs-5 text-light">
-                                To set up large scale farming in Sri Lanka
-                            </a>
-                        </div>
+                        <a href="proj_cat_farming.html">
+                            <img src="assets/img/invest/invest-3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay">
+                                <p class="card-text fs-5 text-light">
+                                    To set up large scale farming in Sri Lanka
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="assets/img/invest/invest-4.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay">
-                            <a href="proj_solar.html" class="card-text fs-5 text-light">
-                                To set up solar power plants and supply electricity to the state
-                            </a>
-                        </div>
+                        <a href="proj_solar.html">
+                            <img src="assets/img/invest/invest-4.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay">
+                                <p class="card-text fs-5 text-light">
+                                    To set up solar power plants and supply electricity to the state
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card">
-                        <img src="assets/img/invest/invest-6.jpg" class="card-img-top" alt="...">
-                        <div class="card-body overlay">
-                            <a href="#" class="card-text fs-5 text-light">
-                                Starting Private Banking Services is to provide public with financial services.
-                            </a>
-                        </div>
+                        <a href="#">
+                            <img src="assets/img/invest/invest-6.jpg" class="card-img-top" alt="...">
+                            <div class="card-body overlay">
+                                <p class="card-text fs-5 text-light">
+                                    Starting Private Banking Services is to provide public with financial services.
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
