--- a/proj_hotel.html
+++ b/proj_hotel.html
@@ -116,7 +116,7 @@
                 and banqueting facilities and a Signature Shopping Complex.
 
             </p>
-            <h3 class="fw-bold">Introduction</h3>
+            <h3 class="fw-bold text-uppercase">Introduction</h3>
             <h4>ABOUT THE PROJECT</h4>
 
             <p class="text-justify fs-5">
@@ -386,7 +386,7 @@
 
             <!-- No 2 -->
             <div>
-                <h3 class="fw-bold">Waste Water and Solid Waste Management </h3>
+                <h3 class="fw-bold text-uppercase">Waste Water and Solid Waste Management </h3>
                 <p class="text-justify fs-5">
                     The complex will use state of the art technology to treat the Solid Waste Management and Water Waste
                     Management technology . The treated water shall be used for gardening purposes and the treated solid
